--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<h2><img src="images/HR-inspiring-quotes.jpg"/></h2>
+<!-- <h2><img src="images/HR-inspiring-quotes.jpg"/></h2> -->
 
 <p>"Quote will go here."</p>
 
+body {
+    background-image: linear-gradient(
+        115deg,
+        rgba(58, 58, 158, 0.8),
+        rgba(136, 136, 206, 0.7)
+      ), url("<img src="images/HR-inspiring-quotes.jpg"/>");
+      background-size: cover;
+    background-repeat: no-repeat;
+      height: 100vh;
+      width: 100%;
+  }
