--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!-- <h2><img src="images/HR-inspiring-quotes.jpg"/></h2> -->
 
-<p>"Quote will go here."</p>
+<!-- <p>"Quote will go here."</p> -->
 
-body {
-    background-image: linear-gradient(
-        115deg,
-        rgba(58, 58, 158, 0.8),
-        rgba(136, 136, 206, 0.7)
-      ), url("<img src="images/HR-inspiring-quotes.jpg"/>");
-      background-size: cover;
-    background-repeat: no-repeat;
-      height: 100vh;
-      width: 100%;
-  }
+  <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Image Overlay with Text</title>
+        <link rel="stylesheet" href="styles.css"> 
+        
+    </head>
+    <body>
+        <div class="image-container">
+            <img src="images/HR-inspiring-quotes.jpg" alt="image">
+            <div class="overlay-text">"Quote will go here."</div>
+        </div>
+    </body>
+</html>
