--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!-- <h2><img src="images/HR-inspiring-quotes.jpg"/></h2> -->
-
-<!-- <p>"Quote will go here."</p> -->
-
   <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Image Overlay with Text</title>
+        <title>Inspirational Quotes</title>
         <link rel="stylesheet" href="style.css"> 
         
     </head>
