--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <img src="images/HR-inspiring-quotes.jpg" alt="image">
             <div class="overlay-text">"Quote will go here."</div>
         </div>
+        <script src="scripts/main.js"></script>
+
     </body>
 </html>
