testing script in overlay class

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <div class="image-container">
             <img src="images/HR-inspiring-quotes.jpg" alt="image">
-            <div class="overlay-text">"Quote will go here."</div>
+            <div class="overlay-text">"Quote will go here."<script src="scripts/main.js"></script></div>
         </div>
-        <script src="scripts/main.js"></script>
+        
 
     </body>
 </html>
